packages/registry-2/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: registry
  labels:
    app: registry
spec:
  containers:
    - image: registry:2
      name: registry
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 5000
      volumeMounts:
      - name: registry-vol
        mountPath: /var/lib/registry
      - name: daemon-config
        mountPath: /etc/docker/daemon.yaml
        subPath: daemon.yaml
  volumes:
  - name: registry-vol
    emptyDir: {}
  - name: daemon-config
    configMap:
      name: registry-daemon-config
