packages/registry-2/registry-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: registry
  labels:
    app: registry
spec:
  containers:
    - image: registry:2
      name: registry
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 5000
      volumeMounts:
      - name: registry-vol
        mountPath: /var/lib/registry
      - name: token-auth-root-cert-bundle
        mountPath: /tokenAuthRootCertBundle
        readOnly: true
      - name: registry-tls-certificate
        mountPath: /etc/registry/certs
#      - name: daemon-config
#        mountPath: /etc/docker/daemon.yaml
#        subPath: daemon.yaml
  volumes:
  - name: registry-vol
    emptyDir: {}
  - name: token-auth-root-cert-bundle
    secret:
      secretName: docker-auth-token-certificate
      items:
        - key: tls.crt
          path: tls.crt
  - name: registry-tls-certificate
    secret:
      secretName: registry-tls-certificate

#  - name: daemon-config
#    configMap:
#      name: registry-daemon-config
