packages/registry-2/docker-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-auth
spec:
  selector:
    app: docker-auth
  ports:
    - protocol: TCP
      port: 443
      targetPort: 5001
