packages/registry-2/docker-auth-ingress-tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  labels:
    app: docker-auth-ingress-tls
  name: docker-auth-ingress-tls
  namespace: ci
spec:
  rules:
  - host: docker-auth.vfeld.net
    http:
      paths:
      - backend:
          serviceName: docker-auth
          servicePort: 443
  tls:
  - hosts:
    - docker-auth.vfeld.net
    secretName: docker-auth-tls-certificate
