packages/registry-2/registry-ingress-tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  labels:
    app: registry-ingress-tls
  name: registry-ingress-tls
  namespace: ci
spec:
  rules:
  - host: registry.vfeld.net
    http:
      paths:
      - backend:
          serviceName: registry
          servicePort: 443
  tls:
  - hosts:
    - registry.vfeld.net
    secretName: registry-tls-certificate
